tests/comp/sem/invalid/call_wrong-2.mj
class A {

	public int test(boolean a) {
		/*** test(3); ***/
	}

	public static void main(String[] args) {
	}

}
